--- a/src/game/gui/game_screen.fxml
+++ b/src/game/gui/game_screen.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane fx:id="pane_GameScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.Controller">
+<GridPane fx:id="pane_GameScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.GameController">
    <columnConstraints>
       <ColumnConstraints />
       <ColumnConstraints />
@@ -35,8 +39,47 @@
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
    </rowConstraints>
    <children>
-      <Button fx:id="btn_startGame" mnemonicParsing="false" onAction="#startGame" text="Begin" GridPane.rowIndex="1" />
+      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="5">
+         <children>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="277.0">
+               <children>
+                  <Label fx:id="lbl_Player1Name" layoutY="15.0" text="Player 1">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lbl_Player1Score" layoutX="133.0" layoutY="20.0" text="Score" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="158.0" prefWidth="248.0">
+               <children>
+                  <Label fx:id="lbl_Player2Name" layoutY="15.0" text="Player 2" textAlignment="RIGHT">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lbl_Player2Score" layoutX="127.0" layoutY="20.0" text="Score" textAlignment="RIGHT" />
+               </children></AnchorPane>
+         </children>
+      </HBox>
+      <Label fx:id="lbl_TurnCounter" prefHeight="21.0" prefWidth="453.0" text="Turn: " textAlignment="CENTER" GridPane.rowIndex="9" />
+      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="16">
+         <children>
+            <Label fx:id="lbl_Dice1" prefHeight="98.0" prefWidth="118.0" text="0" textAlignment="CENTER" />
+            <Label fx:id="lbl_Dice2" layoutX="10.0" layoutY="10.0" prefHeight="98.0" prefWidth="118.0" text="0" textAlignment="CENTER" />
+            <Label fx:id="lbl_Dice3" layoutX="128.0" layoutY="10.0" prefHeight="98.0" prefWidth="118.0" text="0" textAlignment="CENTER" />
+         </children></HBox>
+      <Button fx:id="btn_rollDice" mnemonicParsing="false" onAction="#roll" text="Roll" GridPane.rowIndex="27" />
    </children>
 </GridPane>
