--- a/src/game/gui/game_screen.fxml
+++ b/src/game/gui/game_screen.fxml
@@ -27,19 +27,9 @@
    <children>
       <VBox fillWidth="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Label fx:id="lbl_TurnCounter" prefHeight="21.0" prefWidth="453.0" text="Turn: ">
-               <VBox.margin>
-                  <Insets left="60.0" right="60.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets left="40.0" right="40.0" />
-               </padding>
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font></Label>
             <HBox prefHeight="74.0" prefWidth="589.0">
                <children>
-                  <VBox prefHeight="74.0" prefWidth="250.0">
+                  <VBox fx:id="vbx_Player1Info" prefHeight="74.0" prefWidth="250.0">
                      <children>
                         <Label fx:id="lbl_Player1Name" text="Player 1">
                            <font>
@@ -53,7 +43,7 @@
                         <Insets left="10.0" right="10.0" />
                      </padding>
                   </VBox>
-                  <VBox prefHeight="92.0" prefWidth="250.0">
+                  <VBox fx:id="vbx_Player2Info" prefHeight="92.0" prefWidth="250.0">
                      <children>
                         <Label fx:id="lbl_Player2Name" text="Player 2" textAlignment="RIGHT">
                            <font>
@@ -72,6 +62,16 @@
                   <Insets left="20.0" right="20.0" />
                </padding>
             </HBox>
+            <Label fx:id="lbl_TurnCounter" prefHeight="21.0" prefWidth="453.0" text="Turn: ">
+               <VBox.margin>
+                  <Insets left="60.0" right="60.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="10.0" left="40.0" right="40.0" top="10.0" />
+               </padding>
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font></Label>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Label fx:id="lbl_Dice1" prefHeight="150.0" prefWidth="50.0" text="1" textAlignment="CENTER">
@@ -119,7 +119,7 @@
                <padding>
                   <Insets left="20.0" right="20.0" />
                </padding></Label>
-            <TextArea fx:id="txtarea_GameLog" editable="false" prefHeight="139.0" prefWidth="590.0" text="Game Start!" wrapText="true">
+            <TextArea fx:id="txtarea_GameLog" editable="false" prefHeight="139.0" prefWidth="542.0" text="Game Start!" wrapText="true">
                <padding>
                   <Insets left="50.0" right="50.0" />
                </padding></TextArea>
