--- a/src/game/gui/main_menu.fxml
+++ b/src/game/gui/main_menu.fxml
@@ -7,8 +7,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="rootPane" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.MainController">
+<GridPane fx:id="rootPane" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.MainController">
    <columnConstraints>
+      <ColumnConstraints />
       <ColumnConstraints />
       <ColumnConstraints />
       <ColumnConstraints />
@@ -28,12 +29,17 @@
       <RowConstraints />
    </rowConstraints>
    <children>
-      <Label text="Hatesh's Dice Game">
+      <Label text="Hatesh's Dice Game" GridPane.columnSpan="5">
          <font>
             <Font size="50.0" />
          </font>
       </Label>
       <Button fx:id="btn_LoadWelcome" mnemonicParsing="false" onAction="#loadWelcome" text="Begin" GridPane.rowIndex="1">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+      <Button fx:id="btn_LoaHelp" layoutX="90.0" layoutY="285.0" mnemonicParsing="false" onAction="#loadHelp" text="Help" GridPane.columnIndex="4" GridPane.rowIndex="1">
          <font>
             <Font size="20.0" />
          </font>
