--- a/src/game/gui/welcome_screen.fxml
+++ b/src/game/gui/welcome_screen.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="pane_WelcomeScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.WelcomeController">
+<GridPane fx:id="pane_WelcomeScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.WelcomeController">
    <columnConstraints>
       <ColumnConstraints />
       <ColumnConstraints />
@@ -45,6 +45,7 @@
             <Font size="27.0" />
          </font>
       </Label>
+      <Label text="Just enter a few details and then the game can start!" GridPane.columnIndex="1" GridPane.rowIndex="6" />
       <GridPane prefHeight="371.0" prefWidth="450.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -77,6 +78,11 @@
             </Button>
             <Label text="Max Score" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="txt_MaxScore" promptText="Enter the Score to Win" text="30" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button fx:id="btn_LoadHelp" mnemonicParsing="false" onAction="#loadHelp" text="Help" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
          </children>
       </GridPane>
    </children>
