--- a/src/game/gui/game_screen.fxml
+++ b/src/game/gui/game_screen.fxml
@@ -1,132 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<GridPane fx:id="pane_GameScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.GameController">
-   <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
-   <children>
-      <VBox fillWidth="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <children>
-            <HBox prefHeight="74.0" prefWidth="589.0">
-               <children>
-                  <VBox fx:id="vbx_Player1Info" prefHeight="74.0" prefWidth="250.0">
-                     <children>
-                        <Label fx:id="lbl_Player1Name" text="Player 1">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
+<GridPane fx:id="pane_GameScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity"
+          prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.GameController">
+    <columnConstraints>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints/>
+        <RowConstraints/>
+    </rowConstraints>
+    <children>
+        <VBox fillWidth="false" prefHeight="500.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <children>
+                <HBox prefHeight="74.0" prefWidth="589.0">
+                    <children>
+                        <VBox fx:id="vbx_Player1Info" prefHeight="74.0" prefWidth="250.0">
+                            <children>
+                                <Label fx:id="lbl_Player1Name" text="Player 1">
+                                    <font>
+                                        <Font size="20.0"/>
+                                    </font>
+                                </Label>
+                                <Label fx:id="lbl_Player1Score" text="Score"/>
+                                <ProgressBar fx:id="pgr_Player1Score" prefHeight="23.0" prefWidth="230.0"
+                                             progress="0.0"/>
+                            </children>
+                            <padding>
+                                <Insets left="10.0" right="10.0"/>
+                            </padding>
+                        </VBox>
+                        <VBox fx:id="vbx_Player2Info" prefHeight="92.0" prefWidth="250.0">
+                            <children>
+                                <Label fx:id="lbl_Player2Name" text="Player 2" textAlignment="RIGHT">
+                                    <font>
+                                        <Font size="20.0"/>
+                                    </font>
+                                </Label>
+                                <Label fx:id="lbl_Player2Score" text="Score" textAlignment="RIGHT"/>
+                                <ProgressBar fx:id="pgr_Player2Score" prefHeight="23.0" prefWidth="230.0"
+                                             progress="0.0"/>
+                            </children>
+                            <padding>
+                                <Insets left="10.0" right="10.0"/>
+                            </padding>
+                        </VBox>
+                    </children>
+                    <padding>
+                        <Insets left="20.0" right="20.0"/>
+                    </padding>
+                </HBox>
+                <Label fx:id="lbl_TurnCounter" prefHeight="21.0" prefWidth="453.0" text="Turn: ">
+                    <VBox.margin>
+                        <Insets left="60.0" right="60.0"/>
+                    </VBox.margin>
+                    <padding>
+                        <Insets bottom="10.0" left="40.0" right="40.0" top="10.0"/>
+                    </padding>
+                    <font>
+                        <Font name="System Bold" size="20.0"/>
+                    </font>
+                </Label>
+                <HBox prefHeight="100.0" prefWidth="200.0">
+                    <children>
+                        <Label fx:id="lbl_Dice1" prefHeight="150.0" prefWidth="50.0" text="1" textAlignment="CENTER">
+                            <padding>
+                                <Insets left="20.0" right="20.0"/>
+                            </padding>
                         </Label>
-                        <Label fx:id="lbl_Player1Score" text="Score" />
-                        <ProgressBar fx:id="pgr_Player1Score" prefHeight="23.0" prefWidth="230.0" progress="0.0" />
-                     </children>
-                     <padding>
-                        <Insets left="10.0" right="10.0" />
-                     </padding>
-                  </VBox>
-                  <VBox fx:id="vbx_Player2Info" prefHeight="92.0" prefWidth="250.0">
-                     <children>
-                        <Label fx:id="lbl_Player2Name" text="Player 2" textAlignment="RIGHT">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
+                        <ImageView fx:id="img_Dice1" fitHeight="125.0" fitWidth="125.0" pickOnBounds="true"
+                                   preserveRatio="true">
+                            <image>
+                                <Image url="@../graphics/1.jpeg"/>
+                            </image>
+                        </ImageView>
+                        <Label fx:id="lbl_Dice2" layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="50.0"
+                               text="2" textAlignment="CENTER">
+                            <padding>
+                                <Insets left="20.0" right="20.0"/>
+                            </padding>
                         </Label>
-                        <Label fx:id="lbl_Player2Score" text="Score" textAlignment="RIGHT" />
-                        <ProgressBar fx:id="pgr_Player2Score" prefHeight="23.0" prefWidth="230.0" progress="0.0" />
-                     </children>
-                     <padding>
-                        <Insets left="10.0" right="10.0" />
-                     </padding>
-                  </VBox>
-               </children>
-               <padding>
-                  <Insets left="20.0" right="20.0" />
-               </padding>
-            </HBox>
-            <Label fx:id="lbl_TurnCounter" prefHeight="21.0" prefWidth="453.0" text="Turn: ">
-               <VBox.margin>
-                  <Insets left="60.0" right="60.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="10.0" left="40.0" right="40.0" top="10.0" />
-               </padding>
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font></Label>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label fx:id="lbl_Dice1" prefHeight="150.0" prefWidth="50.0" text="1" textAlignment="CENTER">
-                     <padding>
-                        <Insets left="20.0" right="20.0" />
-                     </padding></Label>
-                  <ImageView fx:id="img_Dice1" fitHeight="125.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../graphics/1.jpeg" />
-                     </image></ImageView>
-                  <Label fx:id="lbl_Dice2" layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="50.0" text="2" textAlignment="CENTER">
-                     <padding>
-                        <Insets left="20.0" right="20.0" />
-                     </padding></Label>
-                  <ImageView fx:id="img_Dice2" fitHeight="125.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../graphics/2.jpeg" />
-                     </image></ImageView>
-                  <Label fx:id="lbl_Dice3" layoutX="128.0" layoutY="10.0" prefHeight="150.0" prefWidth="50.0" text="3" textAlignment="CENTER">
-                     <padding>
-                        <Insets left="20.0" right="20.0" />
-                     </padding></Label>
-                  <ImageView fx:id="img_Dice3" fitHeight="125.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../graphics/3.jpeg" />
-                     </image>
-                     <HBox.margin>
-                        <Insets right="20.0" />
-                     </HBox.margin></ImageView>
-               </children>
-               <padding>
-                  <Insets top="20.0" />
-               </padding>
-            </HBox>
-            <AnchorPane prefHeight="90.0" prefWidth="454.0">
-               <children>
-                  <Label fx:id="lbl_WhoseTurn" layoutX="59.0" layoutY="14.0" prefHeight="21.0" prefWidth="318.0" text="First Up" textAlignment="CENTER" />
-                  <Button fx:id="btn_rollDice" layoutX="188.0" layoutY="44.0" mnemonicParsing="false" onAction="#roll" prefWidth="78.0" text="Roll" />
-               </children>
-            </AnchorPane>
-            <Label fx:id="lbl_TextOutput" prefHeight="21.0" text="Game Start!" wrapText="true">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <padding>
-                  <Insets left="20.0" right="20.0" />
-               </padding></Label>
-            <TextArea fx:id="txtarea_GameLog" editable="false" prefHeight="139.0" prefWidth="542.0" text="Game Start!" wrapText="true">
-               <padding>
-                  <Insets left="50.0" right="50.0" />
-               </padding></TextArea>
-         </children>
-         <GridPane.margin>
-            <Insets />
-         </GridPane.margin>
-      </VBox>
-   </children>
+                        <ImageView fx:id="img_Dice2" fitHeight="125.0" fitWidth="125.0" pickOnBounds="true"
+                                   preserveRatio="true">
+                            <image>
+                                <Image url="@../graphics/2.jpeg"/>
+                            </image>
+                        </ImageView>
+                        <Label fx:id="lbl_Dice3" layoutX="128.0" layoutY="10.0" prefHeight="150.0" prefWidth="50.0"
+                               text="3" textAlignment="CENTER">
+                            <padding>
+                                <Insets left="20.0" right="20.0"/>
+                            </padding>
+                        </Label>
+                        <ImageView fx:id="img_Dice3" fitHeight="125.0" fitWidth="125.0" pickOnBounds="true"
+                                   preserveRatio="true">
+                            <image>
+                                <Image url="@../graphics/3.jpeg"/>
+                            </image>
+                            <HBox.margin>
+                                <Insets right="20.0"/>
+                            </HBox.margin>
+                        </ImageView>
+                    </children>
+                    <padding>
+                        <Insets top="20.0"/>
+                    </padding>
+                </HBox>
+                <AnchorPane prefHeight="90.0" prefWidth="454.0">
+                    <children>
+                        <Label fx:id="lbl_WhoseTurn" layoutX="59.0" layoutY="14.0" prefHeight="21.0" prefWidth="318.0"
+                               text="First Up" textAlignment="CENTER"/>
+                        <Button fx:id="btn_rollDice" layoutX="188.0" layoutY="44.0" mnemonicParsing="false"
+                                onAction="#roll" prefWidth="78.0" text="Roll"/>
+                    </children>
+                </AnchorPane>
+                <Label fx:id="lbl_TextOutput" prefHeight="21.0" text="Game Start!" wrapText="true">
+                    <VBox.margin>
+                        <Insets/>
+                    </VBox.margin>
+                    <padding>
+                        <Insets left="20.0" right="20.0"/>
+                    </padding>
+                </Label>
+                <TextArea fx:id="txtarea_GameLog" editable="false" prefHeight="139.0" prefWidth="542.0"
+                          text="Game Start!" wrapText="true">
+                    <padding>
+                        <Insets left="50.0" right="50.0"/>
+                    </padding>
+                </TextArea>
+            </children>
+            <GridPane.margin>
+                <Insets/>
+            </GridPane.margin>
+        </VBox>
+    </children>
 </GridPane>
