--- a/src/game/gui/main_menu.fxml
+++ b/src/game/gui/main_menu.fxml
@@ -2,47 +2,48 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<GridPane fx:id="rootPane" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.MainController">
-   <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints />
-      <ColumnConstraints />
-      <ColumnConstraints />
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
-   <children>
-      <Label text="Hatesh's Dice Game" GridPane.columnSpan="5">
-         <font>
-            <Font size="50.0" />
-         </font>
-      </Label>
-      <Button fx:id="btn_LoadWelcome" mnemonicParsing="false" onAction="#loadWelcome" text="Begin" GridPane.rowIndex="1">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-      <Button fx:id="btn_LoaHelp" layoutX="90.0" layoutY="285.0" mnemonicParsing="false" onAction="#loadHelp" text="Help" GridPane.columnIndex="4" GridPane.rowIndex="1">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Button>
-   </children>
+<GridPane fx:id="rootPane" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
+          prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="game.gui.MainController">
+    <columnConstraints>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+    </rowConstraints>
+    <children>
+        <Label text="Hatesh's Dice Game" GridPane.columnSpan="5">
+            <font>
+                <Font size="50.0"/>
+            </font>
+        </Label>
+        <Button fx:id="btn_LoadWelcome" mnemonicParsing="false" onAction="#loadWelcome" text="Begin"
+                GridPane.rowIndex="1">
+            <font>
+                <Font size="20.0"/>
+            </font>
+        </Button>
+        <Button fx:id="btn_LoaHelp" layoutX="90.0" layoutY="285.0" mnemonicParsing="false" onAction="#loadHelp"
+                text="Help" GridPane.columnIndex="4" GridPane.rowIndex="1">
+            <font>
+                <Font size="20.0"/>
+            </font>
+        </Button>
+    </children>
 </GridPane>
