--- a/src/game/gui/win_screen.fxml
+++ b/src/game/gui/win_screen.fxml
@@ -2,56 +2,55 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
-<GridPane fx:id="pane_GameScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.WinController">
+<GridPane fx:id="pane_GameScreen" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity"
+          prefHeight="600.0" prefWidth="600.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="game.gui.WinController">
     <columnConstraints>
-        <ColumnConstraints />
-        <ColumnConstraints />
-        <ColumnConstraints />
-        <ColumnConstraints />
-        <ColumnConstraints />
-        <ColumnConstraints />
-        <ColumnConstraints />
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-        <RowConstraints />
-      <RowConstraints />
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
     </rowConstraints>
     <children>
-        <Label fx:id="lbl_WinMessage" prefHeight="153.0" prefWidth="455.0" text="Congrats" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
+        <Label fx:id="lbl_WinMessage" prefHeight="153.0" prefWidth="455.0" text="Congrats" textAlignment="CENTER"
+               wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
             <font>
-                <Font size="27.0" />
+                <Font size="27.0"/>
             </font>
         </Label>
-      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="15">
-         <children>
-            <Button fx:id="btn_Rematch" mnemonicParsing="false" onAction="#rematch" text="Rematch" />
-            <Button fx:id="btn_NewPlayers" mnemonicParsing="false" onAction="#newPlayers" text="New Players" />
-            <Button fx:id="btn_MainMenu" mnemonicParsing="false" onAction="#loadMenu" text="Main Menu" />
-         </children>
-      </HBox>
+        <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="15">
+            <children>
+                <Button fx:id="btn_Rematch" mnemonicParsing="false" onAction="#rematch" text="Rematch"/>
+                <Button fx:id="btn_NewPlayers" mnemonicParsing="false" onAction="#newPlayers" text="New Players"/>
+                <Button fx:id="btn_MainMenu" mnemonicParsing="false" onAction="#loadMenu" text="Main Menu"/>
+            </children>
+        </HBox>
     </children>
 </GridPane>
