--- a/src/game/gui/main_menu.fxml
+++ b/src/game/gui/main_menu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -44,5 +45,16 @@
                 <Font size="20.0" />
             </font>
         </Button>
+      <Button fx:id="btn_Exit" layoutX="208.0" layoutY="285.0" mnemonicParsing="false" onAction="#exit" text="Quit" GridPane.columnIndex="4" GridPane.rowIndex="1">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <GridPane.margin>
+            <Insets left="250.0" />
+         </GridPane.margin>
+      </Button>
     </children>
 </GridPane>
